--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -1,3 +1,10 @@
 //main:../main.scss
+$font-regular: 'Roboto', sans-serif;
+$font-title: 'Shrikhand', cursive;
+
+$clr-pri: #9356DC;
+$clr-sec: #FF79DA;
+$clr-ter: #99E2D0;
+
 $mobile-width: 375px;
 $tablet-width: 768px;
