--- a/public/stylesheets/base/_base.scss
+++ b/public/stylesheets/base/_base.scss
@@ -7,12 +7,18 @@ html {
   box-sizing: inherit;
 }
 body {
-  margin: 0;
-  max-width: $mobile-width;
+  margin: 0 auto;
+  width: 100%;
+}
+section {
+  max-width: $tablet-width;
 }
 input {
   outline: none;
 }
 a {
   text-decoration: none;
+}
+h1, h2 {
+  display: inline;
 }
