--- a/public/stylesheets/layout/_header.scss
+++ b/public/stylesheets/layout/_header.scss
@@ -1,1 +1,11 @@
 //main:../main.scss
+.header {
+  height: 65px;
+  padding-top: 5px;
+  text-align: center;
+  @include minblur-shadow;
+  &__heading {
+    line-height: 65px;
+    @include heading-style;
+  }
+}
