--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -5,6 +5,12 @@ $font-title: 'Shrikhand', cursive;
 $clr-pri: #9356DC;
 $clr-sec: #FF79DA;
 $clr-ter: #99E2D0;
+$clr-ico: #8D8D8D;
+
+$clr-bg: #FFFFFF;
+$clr-bg-sec: #F6F6F6;
+
+$clr-form: #EAEAEA;
 
 $mobile-width: 375px;
 $tablet-width: 768px;
