--- a/public/stylesheets/layout/_header.scss
+++ b/public/stylesheets/layout/_header.scss
@@ -4,8 +4,10 @@
   padding-top: 5px;
   text-align: center;
   @include minblur-shadow;
+  z-index: 2;
+  position: relative;
   &__heading {
     line-height: 65px;
-    @include heading-style;
+    @include font-style(title);
   }
 }
