--- a/public/stylesheets/base/_typography.scss
+++ b/public/stylesheets/base/_typography.scss
@@ -1,6 +1,6 @@
 //main:../main.scss
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
 
-body {
+body, input {
   font-family: $font-regular;
 }
