--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -11,6 +11,8 @@ $clr-bg: #FFFFFF;
 $clr-bg-sec: #F6F6F6;
 
 $clr-form: #EAEAEA;
+$clr-btn: #FFFFFF;
 
 $mobile-width: 375px;
 $tablet-width: 768px;
+$laptop-width: 1444px;
