--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $clr-bg-sec: #F6F6F6;
 $clr-form: #EAEAEA;
 $clr-btn: #FFFFFF;
 
+$btn-radius: 30px;
+
 $mobile-width: 375px;
 $tablet-width: 768px;
 $laptop-width: 1444px;
