--- a/public/stylesheets/base/_typography.scss
+++ b/public/stylesheets/base/_typography.scss
@@ -1,5 +1,5 @@
 //main:../main.scss
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&family=Shrikhand&display=swap');
 
 body, input {
   font-family: $font-regular;
