--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -1,7 +1,4 @@
 //main:../main.scss
-$font-regular: 'Roboto', sans-serif;
-$font-title: 'Shrikhand', cursive;
-
 $clr-pri: #9356DC;
 $clr-sec: #FF79DA;
 $clr-ter: #99E2D0;
@@ -18,3 +15,15 @@ $btn-radius: 30px;
 $mobile-width: 375px;
 $tablet-width: 768px;
 $laptop-width: 1444px;
+
+//Fonts style
+$font-regular: 'Roboto', sans-serif;
+$font-title: 'Shrikhand', cursive;
+$m: 15px;
+$l: 18px;
+$xl: 25px;
+$s-title: 20px;
+$xl-title: 32px;
+$light: 100;
+$medium: 500;
+$bold: 700;
