--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -3,9 +3,11 @@ $clr-pri: #9356DC;
 $clr-sec: #FF79DA;
 $clr-ter: #99E2D0;
 $clr-ico: #8D8D8D;
+$clr-white: #FFFFFF;
 
 $clr-bg: #FFFFFF;
 $clr-bg-sec: #F6F6F6;
+$clr-footer: #353535;
 
 $clr-form: #EAEAEA;
 $clr-btn: #FFFFFF;
@@ -19,6 +21,7 @@ $laptop-width: 1444px;
 //Fonts style
 $font-regular: 'Roboto', sans-serif;
 $font-title: 'Shrikhand', cursive;
+$s: 13.5px;
 $m: 15px;
 $l: 18px;
 $xl: 25px;
