--- a/public/stylesheets/base/_base.scss
+++ b/public/stylesheets/base/_base.scss
@@ -20,5 +20,11 @@ input {
   outline: none;
 }
 a {
+  color: inherit;
   text-decoration: none;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
