--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $clr-pri: #9356DC;
 $clr-sec: #FF79DA;
 $clr-ter: #99E2D0;
-$clr-ico: #8D8D8D;
+$clr-ico: #7E7E7E;
 $clr-white: #FFFFFF;
 
 $clr-bg: #FFFFFF;
@@ -16,7 +16,7 @@ $btn-radius: 30px;
 
 $mobile-width: 375px;
 $tablet-width: 768px;
-$laptop-width: 1444px;
+$laptop-width: 1280px;
 
 //Fonts style
 $font-regular: 'Roboto', sans-serif;
