--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -8,5 +8,7 @@
   'base/typography',
   'layout/header',
   'layout/footer',
+  'layout/sections',
+  'layout/grid',
   'components/button',
   'pages/home';
