--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $clr-form: #EAEAEA;
 $clr-btn: #FFFFFF;
 
 $btn-radius: 30px;
+$card-width: 335px;
+$card-picture-height: 175px;
 
 $mobile-width: 375px;
 $tablet-width: 768px;
