Replace flex with grid on restaurants cards for better responsive design

--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -12,6 +12,8 @@ $clr-footer: #353535;
 $clr-form: #EAEAEA;
 $clr-btn: #FFFFFF;
 
+$heading-padding: 20px;
+
 $btn-radius: 30px;
 $card-width: 335px;
 $card-picture-height: 175px;
@@ -19,6 +21,7 @@ $card-picture-height: 175px;
 $mobile-width: 375px;
 $tablet-width: 768px;
 $laptop-width: 1280px;
+$laptop-hd-width: 1440px;
 
 //Fonts style
 $font-regular: 'Roboto', sans-serif;
