--- a/public/stylesheets/components/_card.scss
+++ b/public/stylesheets/components/_card.scss
@@ -3,7 +3,7 @@
   display: block;
   position: relative;
   width: $card-width;
-  margin: 10px;
+  //margin: 10px;
   border-radius: 15px;
   overflow: hidden;
   @include blur-shadow;
