--- a/public/stylesheets/layout/_grid.scss
+++ b/public/stylesheets/layout/_grid.scss
@@ -9,8 +9,20 @@
       justify-content: center;
     }
   }
-  &--restaurants {
-    flex-wrap: wrap;
-    justify-content: center;
+}
+.grid {
+  display: grid;
+  grid-template-columns: $card-width;
+  gap: 20px;
+  justify-items: center;
+  justify-content: center;
+  @include tablet-only {
+    grid-template-columns: repeat(2, $card-width);
+  }
+  @include laptop-only {
+    grid-template-columns: repeat(3, $card-width);
+  }
+  @include laptop-hd-only {
+    grid-template-columns: repeat(4, $card-width);
   }
 }
