--- a/public/stylesheets/layout/_sections.scss
+++ b/public/stylesheets/layout/_sections.scss
@@ -4,6 +4,9 @@
   padding: 45px 0;
   &--centered {
     text-align: center;
+    @include laptop-hd-only {
+      padding: 60px 0;
+    }
   }
   &--alt {
     background: $clr-bg-sec;
