--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -1,17 +1,19 @@
 //main:../main.scss
 .search {
   display: flex;
-  padding: 15px 0 15px 80px;
+  padding: 15px 0;
   background: $clr-form;
   &__label {
-    margin: 0 20px;
+    width: 30%;
+    text-align: right;
     cursor: pointer;
     &--hidden {
       display: none;
     }
   }
   &__input {
-    width: 100%;
+    width: 70%;
+    padding: 0 20px;
     border:  none;
     background: inherit;
     @include font-style($m);
