--- a/public/stylesheets/abstracts/_mixins.scss
+++ b/public/stylesheets/abstracts/_mixins.scss
@@ -7,7 +7,7 @@
   left: $left;
 }
 @mixin font-style($size: regular, $weight: normal) {
-  @if ($size == $xl-title or $size == $s-title) {
+  @if ($size == $xl-title or $size == $l-title or $size == $s-title) {
     font-family: $font-title;
   }
   font-size: $size;
