Add mixin for like button style

--- a/public/stylesheets/abstracts/_mixins.scss
+++ b/public/stylesheets/abstracts/_mixins.scss
@@ -36,3 +36,12 @@
     @content;
   }
 }
+@mixin like-button {
+  z-index: 2;
+  background: linear-gradient(black, blue);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+  @include font-style($xl);
+}
