--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -1,10 +1,10 @@
 //main:../main.scss
 .search {
   display: flex;
-  padding: 15px 0;
   background: $clr-form;
   &__label {
     width: 30%;
+    padding: 15px 0;
     text-align: right;
     cursor: pointer;
     &--hidden {
@@ -13,7 +13,7 @@
   }
   &__input {
     width: 70%;
-    padding: 0 20px;
+    padding: 15px 20px;
     border:  none;
     background: inherit;
     @include font-style($m);
