Add better responsive for section headings and restaurants cards

--- a/public/stylesheets/abstracts/_mixins.scss
+++ b/public/stylesheets/abstracts/_mixins.scss
@@ -36,6 +36,16 @@
     @content;
   }
 }
+@mixin fullhd-only {
+  @media screen and (min-width: $fullhd-width) {
+    @content;
+  }
+}
+@mixin ultrahd-only {
+  @media screen and (min-width: $fullhd-width) {
+    @content;
+  }
+}
 @mixin like-button {
   z-index: 2;
   background: linear-gradient(black, blue);
