--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -22,6 +22,8 @@ $mobile-width: 375px;
 $tablet-width: 768px;
 $laptop-width: 1280px;
 $laptop-hd-width: 1440px;
+$fullhd-width: 1920px;
+$ultrahd-width: 2160px;
 
 //Fonts style
 $font-regular: 'Roboto', sans-serif;
