--- a/public/stylesheets/layout/_grid.scss
+++ b/public/stylesheets/layout/_grid.scss
@@ -12,17 +12,17 @@
 }
 .grid {
   display: grid;
-  grid-template-columns: $card-width;
+  grid-template-columns: repeat(auto-fill, minmax(min-content, $card-width));
   gap: 20px;
   justify-items: center;
   justify-content: center;
   @include tablet-only {
-    grid-template-columns: repeat(2, $card-width);
+    //grid-template-columns: repeat(2, $card-width);
   }
   @include laptop-only {
-    grid-template-columns: repeat(3, $card-width);
+    //grid-template-columns: repeat(3, $card-width);
   }
   @include laptop-hd-only {
-    grid-template-columns: repeat(4, $card-width);
+    //grid-template-columns: repeat(4, $card-width);
   }
 }
