--- a/public/stylesheets/layout/_sections.scss
+++ b/public/stylesheets/layout/_sections.scss
@@ -20,13 +20,7 @@
     }
     &--card-responsive {
       @include tablet-only {
-        max-width: ($card-width * 2) + ($heading-padding * 2);
-      }
-      @include laptop-only {
-        max-width: ($card-width * 3) + ($heading-padding * 2);
-      }
-      @include laptop-hd-only {
-        max-width: ($card-width * 4) + ($heading-padding * 2);
+        max-width: 90%;
       }
     }
     &--responsive-centered {
