--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -35,6 +35,7 @@ $xl: 25px;
 $s-title: 20px;
 $l-title: 27px;
 $xl-title: 32px;
-$light: 100;
+$thin: 100;
+$light: 300;
 $medium: 500;
 $bold: 700;
