--- a/public/stylesheets/layout/_sections.scss
+++ b/public/stylesheets/layout/_sections.scss
@@ -1,6 +1,6 @@
 //main:../main.scss
 .section {
-  background: $clr-bg;
+  background: $clr-bg-sec;
   padding: 45px 0;
   &--centered {
     text-align: center;
@@ -9,7 +9,10 @@
     }
   }
   &--alt {
-    background: $clr-bg-sec;
+    background: $clr-bg;
+  }
+  &--menu {
+    padding: 0 0 45px 0;
   }
   &__heading {
     padding: 0 $heading-padding;
@@ -17,6 +20,21 @@
     @include font-style($xl, $bold);
     @include laptop-hd-only {
       max-width: 1440px;
+    }
+    &--menu {
+      position: relative;
+      padding-bottom: 8px;
+      text-transform: uppercase;
+      @include font-style($m, $light);
+      &::after {
+        content: "";
+        position: absolute;
+        left: 20px;
+        bottom: 0;
+        width: 40px;
+        height: 3px;
+        background: $clr-ter;
+      }
     }
     &--card-responsive {
       @include tablet-only {
@@ -31,6 +49,6 @@
   }
   &__p {
     margin: 15px 0 20px 0;
-    @include font-style($l, $light);
+    @include font-style($l, $thin);
   }
 }
