--- a/public/stylesheets/pages/_menu.scss
+++ b/public/stylesheets/pages/_menu.scss
@@ -15,6 +15,11 @@
     border-radius: 40px 40px 0 0;
     line-height: 65px;
     background: $clr-bg-sec;
+    @include laptop-hd-only {
+      max-width: 70%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
   &__name {
     @include font-style($l-title);
