--- a/public/stylesheets/pages/_menu.scss
+++ b/public/stylesheets/pages/_menu.scss
@@ -2,10 +2,18 @@
 .presentation {
   position: relative;
   height: 300px;
-  &__picture img {
+  @include tablet-only {
+    height: 400px;
+  }
+  @include laptop-only {
+    height: 500px;
+  }
+  &__picture {
+    display: block;
     width: 100%;
-    height: 300px;
+    height: inherit;
     object-fit: cover;
+    object-position: center 60%;
   }
   &__heading {
     position: absolute;
