--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -4,6 +4,7 @@
   'abstracts/variables',
   'abstracts/functions',
   'abstracts/mixins',
+  'abstracts/keyframes',
   'base/base',
   'base/typography',
   'layout/header',
@@ -13,5 +14,6 @@
   'components/button',
   'components/card',
   'components/dishcard',
+  'components/loading-spinner',
   'pages/home',
   'pages/menu';
