--- a/public/stylesheets/pages/_menu.scss
+++ b/public/stylesheets/pages/_menu.scss
@@ -33,3 +33,11 @@
     @include font-style($l-title);
   }
 }
+.loading-block {
+  animation: ($load-block-dur + 100ms) slideY backwards, $load-block-dur fadein backwards;
+  @for $i from 1 through $load-block-num {
+    &--#{$i} {
+      animation-delay: $load-block-delay * $i;
+    }
+  }
+}
