--- a/public/stylesheets/abstracts/_keyframes.scss
+++ b/public/stylesheets/abstracts/_keyframes.scss
@@ -17,3 +17,19 @@
     opacity: 0;
   }
 }
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes slideY {
+  from {
+    transform: translateY(50px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
