Add like button on menu pages

--- a/public/stylesheets/abstracts/_mixins.scss
+++ b/public/stylesheets/abstracts/_mixins.scss
@@ -47,6 +47,7 @@
   }
 }
 @mixin like-button {
+  position: absolute;
   z-index: 2;
   background: linear-gradient(black, blue);
   background-clip: text;
