Move like button properties into new file + replace svg by web fonts

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -12,6 +12,7 @@
   'layout/sections',
   'layout/grid',
   'components/button',
+  'components/like-button',
   'components/card',
   'components/dishcard',
   'components/loading-spinner',
