--- a/public/stylesheets/layout/_footer.scss
+++ b/public/stylesheets/layout/_footer.scss
@@ -25,7 +25,7 @@
     &--with-icon {
       display: flex;
       align-items: center;
-      & svg {
+      & i {
         min-width: 25px;
         margin-right: 5px;
       }
