--- a/public/stylesheets/layout/_header.scss
+++ b/public/stylesheets/layout/_header.scss
@@ -9,9 +9,7 @@
   &__arrow {
     position: absolute;
     left: 25px;
-    top: 0;
-    bottom: 0;
-    height: 65px;
+    top: 20px;;
     @include font-style($l);
     @include laptop-only {
       @include font-style($xl);
