--- a/public/stylesheets/components/_like-button.scss
+++ b/public/stylesheets/components/_like-button.scss
@@ -4,8 +4,30 @@
   height: 26px;
   position: absolute;
   z-index: 2;
+  background: none;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px black;
   cursor: pointer;
   @include font-style($xl);
+  &:hover:after {
+    transform: scale(1.1);
+  }
+  &:after {
+    content: "\f004";
+    z-index: 3;
+    position: absolute;
+    transform: scale(0);
+    transition: all 250ms ease-out;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient($clr-pri, $clr-sec);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 0;
+  }
   &--card {
     top: 5px;
     right: 10px;
@@ -15,7 +37,3 @@
     right: 40px;
   }
 }
-
-//background: linear-gradient($clr-pri, $clr-sec);
-//background-clip: text;
-//-webkit-text-fill-color: transparent;
