--- a/public/stylesheets/layout/_grid.scss
+++ b/public/stylesheets/layout/_grid.scss
@@ -16,4 +16,7 @@
   gap: 20px;
   justify-items: center;
   justify-content: center;
+  @include laptop-hd-only {
+    grid-template-columns: repeat(4, minmax(min-content, $card-width));
+  }
 }
