--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -26,7 +26,7 @@
   text-align: center;
   width: 320px;
   height: 75px;
-  margin: 0 auto;
+  margin: 10px auto;
   border-radius: 25px;
   background: $clr-bg-sec;
   @include blur-shadow(0px, 5px, 15px, $clr-bg-sec);
