Fix menu responsive width

--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $heading-padding: 20px;
 
 $btn-radius: 30px;
 $card-width: 335px;
+$menu-width: 750px;
 $card-picture-height: 175px;
 
 $mobile-width: 375px;
