--- a/public/stylesheets/pages/_menu.scss
+++ b/public/stylesheets/pages/_menu.scss
@@ -19,15 +19,13 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    max-width: $menu-width + 20px;
+    left: 50%;
+    transform: translateX(-50%);
     padding: 20px;
     border-radius: 40px 40px 0 0;
     line-height: 65px;
     background: $clr-bg-sec;
-    @include laptop-hd-only {
-      max-width: 70%;
-      left: 50%;
-      transform: translateX(-50%);
-    }
   }
   &__name {
     @include font-style($l-title);
