Fix some font-weight - thin to light

--- a/public/stylesheets/components/_card.scss
+++ b/public/stylesheets/components/_card.scss
@@ -33,7 +33,7 @@
   }
   &__location {
     margin: 5px 0;
-    @include font-style(initial, $thin);
+    @include font-style(initial, $light);
   }
   &__link {
     @include position;
