--- a/public/stylesheets/components/_like-button.scss
+++ b/public/stylesheets/components/_like-button.scss
@@ -11,7 +11,7 @@
   cursor: pointer;
   @include font-style($xl);
   &:hover:after {
-    transform: scale(1.1);
+    transform: scale(1);
   }
   &:after {
     content: "\f004";
@@ -27,7 +27,7 @@
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 0;
+    -webkit-text-stroke: 1px transparent;
   }
   &--card {
     top: 5px;
