--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -62,6 +62,6 @@
     color: $clr-pri;
   }
   &__text {
-    @include font-style(regular, $medium);
+    @include font-style(initial, $medium);
   }
 }
