--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -19,7 +19,9 @@ $card-width: 335px;
 $menu-width: 750px;
 $card-picture-height: 175px;
 
+$mobile-xs-width: 350px;
 $mobile-width: 375px;
+$mobile-xl-width: 414px;
 $tablet-width: 768px;
 $laptop-width: 1280px;
 $laptop-hd-width: 1440px;
