--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -30,7 +30,8 @@
   display: flex;
   align-items: center;
   text-align: center;
-  width: 320px;
+  width: 90%;
+  max-width: 320px;
   height: 75px;
   margin: 10px auto;
   border-radius: 25px;
