Fix colors variables

--- a/public/stylesheets/abstracts/_variables.scss
+++ b/public/stylesheets/abstracts/_variables.scss
@@ -5,8 +5,7 @@ $clr-ter: #99E2D0;
 $clr-ico: #7E7E7E;
 $clr-white: #FFFFFF;
 
-$clr-bg: #FFFFFF;
-$clr-bg-sec: #F6F6F6;
+$clr-bg: #F6F6F6;
 $clr-footer: #353535;
 
 $clr-form: #EAEAEA;
