--- a/public/stylesheets/base/_base.scss
+++ b/public/stylesheets/base/_base.scss
@@ -12,7 +12,7 @@ body, section, h1, h2 {
 }
 body {
   width: 100%;
-  background: $clr-bg-sec;
+  background: $clr-bg;
 }
 input {
   outline: none;
