--- a/public/stylesheets/components/_dishcard.scss
+++ b/public/stylesheets/components/_dishcard.scss
@@ -9,7 +9,7 @@
   margin-bottom: 15px;
   border-radius: 20px;
   overflow: hidden;
-  background: $clr-bg;
+  background: $clr-white;
   cursor: pointer;
   @include blur-shadow;
   &__l-container {
