--- a/public/stylesheets/abstracts/_mixins.scss
+++ b/public/stylesheets/abstracts/_mixins.scss
@@ -13,7 +13,7 @@
   font-size: $size;
   font-weight: $weight;
 }
-@mixin blur-shadow($x: 0, $y: 1px, $blur: 10px, $color: $clr-bg-sec) {
+@mixin blur-shadow($x: 0, $y: 1px, $blur: 10px, $color: $clr-bg) {
   box-shadow: $x $y $blur darken($color, 15%);
 }
 @mixin mobile-xs-only {
