--- a/public/stylesheets/components/_button.scss
+++ b/public/stylesheets/components/_button.scss
@@ -20,7 +20,7 @@
     border-radius: $btn-radius;
     background: linear-gradient(lighten($clr-sec, 5%), lighten($clr-pri, 5%));
     transition: all 300ms ease-out;
-    @include blur-shadow(0, 1px, 20px, darken($clr-bg-sec, 5%));
+    @include blur-shadow(0, 1px, 20px, darken($clr-bg, 5%));
   }
   &:hover {
     &::after {
