--- a/public/stylesheets/pages/_menu.scss
+++ b/public/stylesheets/pages/_menu.scss
@@ -23,7 +23,7 @@
     padding: 20px;
     border-radius: 40px 40px 0 0;
     line-height: 65px;
-    background: $clr-bg-sec;
+    background: $clr-bg;
     @include laptop-only {
       left: 50%;
       transform: translateX(-50%);
