--- a/public/stylesheets/components/_dishcard.scss
+++ b/public/stylesheets/components/_dishcard.scss
@@ -19,23 +19,23 @@
     padding: 13px 0 13px 13px;
     overflow: hidden;
     text-overflow: ellipsis;
-    transition: all 600ms ease-in-out;
   }
   &__r-container {
     display: flex;
     justify-content: flex-end;
     min-height: 70px;
   }
-  &__heading {
+  &__text {
     display: block;
+    max-height: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin: 0;
-    margin-bottom: 5px;
-    @include font-style($l, $medium);
-  }
-  &__infos {
+    transition: all 600ms 600ms ease-in-out;
     @include font-style($m, $light);
+    &--heading {
+      margin-bottom: 5px;
+      @include font-style($l, $medium);
+    }
   }
   &__price {
     align-self: flex-end;
@@ -68,6 +68,12 @@
     display: none;
     &:checked ~ span {
       white-space: nowrap;
+    }
+    &:checked ~ span .dishcard__text {
+      max-height: 18px;
+    }
+    &:checked ~ span .dishcard__text--heading {
+      max-height: 22px;
     }
     &:checked ~ span .dishcard__price {
       width: 90px;
